--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     .animate-subtle-pulse {
       animation: subtle-pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
     }
-    /* Custom scrollbar for insights */
     .custom-scrollbar::-webkit-scrollbar {
       width: 4px;
     }
@@ -38,14 +37,15 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
-    "firebase/app": "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js",
-    "firebase/firestore": "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js",
-    "firebase/": "https://esm.sh/firebase@^12.8.0/"
+    "firebase/app": "https://esm.sh/firebase@^11.0.2/app",
+    "firebase/firestore": "https://esm.sh/firebase@^11.0.2/firestore",
+    "firebase/": "https://esm.sh/firebase@^11.0.2/"
   }
 }
 </script>
 </head>
 <body class="bg-[#F8FAFC] text-slate-900">
   <div id="root"></div>
+  <script type="module" src="index.tsx"></script>
 </body>
 </html>
